# zonefs-tools

./: .gitignore  CONTRIBUTING  Makefile.am  README.md  autogen.sh  configure.ac  zonefs-tools.spec  zonefs-tools.spec.in
LICENSES/: GPL-2.0-or-later.txt
m4/: dontremove
man/: Makefile.am  mkzonefs.8
src/: Makefile.am  mkzonefs.c  zonefs.h  zonefs_dev.c
tests/: zonefs-tests-nullblk.sh  zonefs-tests-scsi-debug.sh  zonefs-tests.sh
tests/scripts/: 0002.sh  0003.sh  0004.sh  0010.sh  0011.sh  0012.sh  0013.sh  0020.sh  0021.sh  0022.sh  0023.sh  0030.sh  0031.sh  0032.sh  0033.sh  0034.sh  0035.sh  0040.sh  0041.sh  0042.sh  0043.sh  0044.sh  0045.sh  0050.sh  0051.sh  0052.sh  0053.sh  0060.sh  0061.sh  0062.sh  0063.sh  0064.sh  0065.sh  0070.sh  0071.sh  0072.sh  0073.sh  0074.sh  0075.sh  0076.sh  (+95 more)
tests/tools/: Makefile.am  zio.c  zopen.c
